# DupliCron--Metadata-Based-Incremental-File-Synchronization-and-Backup

./: README.md
Source Code/: CMakeLists.txt  Config.txt
Source Code/include/: ConfigGlobal.hpp  ConfigParser.hpp  ControlFlow.hpp  FailureDetect.hpp  FileCopier.hpp  FileHasher.hpp  FileScanner.hpp  HDDCopyQueue.hpp  Logger.hpp  MetaDataCache.hpp  SSDCopyQueue.hpp  SyncEngine.hpp  ThreadPool.hpp  TimeUtils.hpp
Source Code/src/: ConfigGlobal.cpp  ConfigParser.cpp  ControlFlow.cpp  FailureDetect.cpp  FileCopier.cpp  FileHasher.cpp  FileScanner.cpp  HDDCopyQueue.cpp  Logger.cpp  MetaDataCache.cpp  SSDCopyQueue.cpp  SyncEngine.cpp  ThreadPool.cpp  main.cpp
